src/test/ui/generics/issue-65285-incorrect-explicit-lifetime-name-needed.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/issue-65285-incorrect-explicit-lifetime-name-needed.rs:5:37
   |
LL | fn should_error<T>() where T : Into<&u32> {}
   |                                     ^ explicit lifetime name needed here

error[E0106]: missing lifetime specifier
  --> $DIR/issue-65285-incorrect-explicit-lifetime-name-needed.rs:9:19
   |
LL |     fn foo<'b, L: X<&'b Nested<K>>>();
   |                   ^^^^^^^^^^^^^^^^ expected lifetime parameter

error[E0106]: missing lifetime specifier
  --> $DIR/issue-65285-incorrect-explicit-lifetime-name-needed.rs:13:15
   |
LL | fn bar<'b, L: X<&'b Nested<i32>>>(){}
   |               ^^^^^^^^^^^^^^^^^^ expected lifetime parameter

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0106, E0637.
For more information about an error, try `rustc --explain E0106`.
